Add GitHub Actions CI pipeline and AI service foundation
- Add CI workflow for API (Rust), Web (SvelteKit), and AI (Python) with linting, testing, and Docker build steps
- Add AI service configuration with settings for database, Redis, S3, OpenAI, and ML models
- Add photo estimation route with damage assessment, material detection, and cost estimation endpoints
- Add AI assistant route for natural language queries, voice transcription, and smart search
- Add analytics route for revenue forecasting, churn

--- a/apps/api/Cargo.toml
+++ b/apps/api/Cargo.toml
@@ -54,7 +54,7 @@ aws-config = "1"
 reqwest = { version = "0.12", features = ["json", "multipart"] }
 
 # Stripe
-stripe-rust = "0.34"
+async-stripe = { version = "0.39", features = ["runtime-tokio-hyper"] }
 
 # Password & crypto
 rand = "0.8"
